agregando Tabs con jQuery

--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
         </nav>
     </div>
     <div class="contenedor nuestros-servicios">
-        <div id="Viajes">
+        <div id="viajes">
             <h3>Proximos Viajes</h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus laborum, quia minus sed ipsum officiis dolore pariatur deserunt, placeat voluptates possimus magni ipsa consequatur exercitationem quae alias nisi fuga a?Lorem ipsum dolor
                 sit amet consectetur adipisicing elit. Perferendis est nostrum vel quisquam nisi necessitatibus nihil autem fugiat, rem voluptate quam deleniti possimus recusandae ad illo. Accusamus tempore recusandae officia.</p>
         </div>
-        <div id="Asesoria">
+        <div id="asesoria">
             <h3>Aseosoria, Cursos</h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus laborum, quia minus sed ipsum officiis dolore pariatur deserunt, placeat voluptates possimus magni ipsa consequatur exercitationem quae alias nisi fuga a?Lorem ipsum dolor
                 sit amet consectetur adipisicing elit. Perferendis est nostrum vel quisquam nisi necessitatibus nihil autem fugiat, rem voluptate quam deleniti possimus recusandae ad illo. Accusamus tempore recusandae officia.</p>
         </div>
-        <div id="Transporte">
+        <div id="transporte">
             <h3>Transporte</h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus laborum, quia minus sed ipsum officiis dolore pariatur deserunt, placeat voluptates possimus magni ipsa consequatur exercitationem quae alias nisi fuga a?Lorem ipsum dolor
                 sit amet consectetur adipisicing elit. Perferendis est nostrum vel quisquam nisi necessitatibus nihil autem fugiat, rem voluptate quam deleniti possimus recusandae ad illo. Accusamus tempore recusandae officia.</p>
